rapid done, maybe?

--- a/src/about_page/about.module.css
+++ b/src/about_page/about.module.css
@@ -1,5 +1,5 @@
 .aboutBackground {
-    background-color: rgb(30, 30, 30);
+    background-color: black;
     height: 60rem;
     display: flex;
     flex-direction: column;
