--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,56 @@
+nav {
+    position: sticky;
+    top: 0;
+    background-color: #333;
+    padding: 1rem;
+    z-index: 1000;
+  }
+  
+  nav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    gap: 2rem;
+  }
+  
+  nav ul li {
+    display: inline;
+  }
+  
+  nav ul li a {
+    color: white;
+    text-decoration: none;
+    font-size: 1.2rem;
+  }
+  
+  nav ul li a:hover {
+    text-decoration: underline;
+  }
+  
 
+  
+  #about {
+    background-color: #f1f1f1;
+  }
+  
+  #rapid {
+    background-color: #e2e2e2;
+  }
+  
+  #experts {
+    background-color: #d3d3d3;
+  }
+  
+  #routine {
+    background-color: #c4c4c4;
+  }
+  
+  #contacts {
+    background-color: #b5b5b5;
+  }
+  
+  html {
+    scroll-behavior: smooth;
+  }
+  
