rapid bug fix, change width to 100 and added a title

--- a/src/contact_page/contact.module.css
+++ b/src/contact_page/contact.module.css
@@ -4,6 +4,8 @@
     padding: 2rem 18rem; /* Padding around the entire container */
     display: grid;
     grid-template-columns: repeat(4, 1fr); /* Four equal columns */
+    width: 100rem;
+    margin: 0 auto;
 }
 
 .contactSection {
