--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,6 +1,6 @@
 .navbar {
-  background-color: #333;
-  padding: 1rem;
+  background-color: #f0f0f0; 
+  padding: 1rem 0; 
   position: sticky;
   top: 0;
   z-index: 1000;
@@ -14,6 +14,7 @@
   gap: 5rem;
   padding: 0;
   margin: 0;
+  align-items: center; 
 }
 
 .navItem {
@@ -21,22 +22,60 @@
 }
 
 .navLink {
-  color: white;
-  text-decoration: none;
+  color: black; 
+  text-decoration: underline;
+  text-decoration-color: black;
+  text-underline-offset: 5px; 
   font-size: 1.2rem;
+  padding: 1rem; 
+  transition: background-color 0.3s ease, color 0.3s ease; 
 }
 
 .navLink:hover {
-  text-decoration: underline;
+  background-color: rgb(165, 165, 165); 
+  color: white; 
+  text-decoration: none; 
 }
+
 
 .section {
 
 }
 
+.section_rapid {
+  background-color: black;
+}
 
 .section_experts {
   background-color: #f9f9f9;
+}
+
+.section_contacts{
+  background-color: black;
+}
+
+.titlePage {
+  background-size: cover;
+  background-position: center;
+  background-color: rgb(35, 35, 35); 
+  color: white;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 15vh; 
+  text-align: center;
+}
+
+.titlePage h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+}
+
+.titlePage p {
+  font-size: 1.5rem;
+  max-width: 600px;
+  margin: 0 auto;
 }
 
 
