--- a/src/rapid_page/rapid.module.css
+++ b/src/rapid_page/rapid.module.css
@@ -1,10 +1,12 @@
 .rapidBackground {
     background-color: black;
     height: 120rem;
+    width: 100rem;
     display: flex;
     flex-direction: column;
     align-items: center;
     place-content: center;
+    margin: 0 auto;
 }
 
 .title {
