--- a/src/routine_page/routine.module.css
+++ b/src/routine_page/routine.module.css
@@ -1,22 +1,24 @@
 .container {
   padding: 40px;
+  text-align: center;
   background-color: #ffffff;
-  max-width: 900px;
-  margin: 0 auto;
+  width: 100rem;
   font-family: Arial, sans-serif;
+  margin: 0 auto;
 }
 
 .title {
-  font-size: 1.5em;
+  text-align: left;
+  font-size: 2.5em;
+  margin-bottom: 40px;
+  border-bottom: 2px solid #6e0f0f;
+  padding-bottom: 20px;
   font-weight: bold;
   color: #333;
-  text-align: left;
-  margin-bottom: 20px;
-  border-bottom: 2px solid #333;
-  padding-bottom: 10px;
 }
 
 .list {
+  text-align: left;
   list-style-type: decimal;
   padding-left: 20px;
   margin-top: 20px;
@@ -24,7 +26,7 @@
 
 .listItem {
   margin-bottom: 20px;
-  font-size: 1em;
+  font-size: 1.5em;
   line-height: 1.6;
   color: #000;
   padding-left: 10px;
@@ -32,27 +34,20 @@
 
 .description {
   margin-top: 10px;
-  font-size: 0.95em;
+  font-size: 1em;
   line-height: 1.4;
   color: #555;
 }
 
 .subList {
-  list-style-type: none;
-  padding: 0;
+  list-style-type: disc; 
+  padding-left: 40px; 
+  margin-top: 10px;
 }
 
 .subItem {
   margin-top: 10px;
-  font-size: 0.95em;
+  font-size: 1em;
   line-height: 1.4;
-  color: #000;
-  padding-left: 20px;
-  list-style-type: none;
-}
-
-.subItem::before {
-  content: '— ';
-  color: #000;
-  margin-right: 5px;
+  color: #555;
 }
