--- a/src/about_page/about.module.css
+++ b/src/about_page/about.module.css
@@ -1,5 +1,5 @@
 .aboutBackground {
-    background-color: black;
+    background-color: #f9f9f9;
     height: 60rem;
     display: flex;
     flex-direction: column;
@@ -21,13 +21,13 @@
     height: 45rem;
     width: 100rem;
     border-radius: 3rem;
-    background-color: rgb(0, 0, 0);
+    background-color: #f0f0f0; ;
     display: flex;
     flex-direction: row;
 }
 
 .about {
-    color: white;
+    color: balck;
     font-size: 2rem;
     font-weight: 500;
     margin-left: 4rem;
